docs: adiciona docs para products
